third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/bug_10991c.exp
module 0x42::Test {
    fun foo(g: |(u64, u64, u64, u64)|(u64), x: u64, y: u64, z: u64, q: u64): u64 {
        g(x, y, z, q)
    }
    public fun test() {
        if (!(foo(|(arg0,arg1,arg2,arg3)| __lambda__1__test(arg0, arg1, arg2, arg3), 10, 100, 1000, 10000) == 10100)) abort 0;
    }
    fun __lambda__1__test(param$0: u64, y: u64, param$2: u64, q: u64): u64 {
        y + q
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ bug_10991c.move:6:20
  │
6 │         if (!(foo(|(arg0,arg1,arg2,arg3)| __lambda__1__test(arg0, arg1, arg2, arg3), 10, 100, 1000, 10000) == 10100)) abort 0;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a variable or struct or variant name
